src/cmds/gradle/snapshots/rtk__cmds__gradle__test_filter__tests__test_success_snapshot.snap
---
source: src/gradle/test_filter.rs
expression: output
---
9 tests completed, 0 failed

BUILD SUCCESSFUL in 8s
12 actionable tasks: 1 executed, 11 up-to-date
